[package]
name = "pallet-xcm-credentials"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
xcm = { git = "https://github.com/paritytech/polkadot.git", tag = "v1.0.0-rc5", default-features = false }
cumulus-primitives-core = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = []
std = [
  "frame-system/std",
  "sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]