[package]
name = "pallet-xcm-credentials"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
cumulus-pallet-parachain-system = { workspace = true }

frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }  
frame-executive = { workspace = true, default-features = false }

sp-std = { workspace = true }         
sp-core = { workspace = true }       
sp-io = { workspace = true }           
sp-runtime = { workspace = true }

xcm = { workspace = true, default-features = false }
xcm-builder = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame/std",
  "sp-std/std",
  "sp-runtime/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "xcm/std",
  "cumulus-pallet-parachain-system/std",
  "frame-support/std",
  "frame-system/std",
  "frame-executive/std",
]
runtime-benchmarks = ["frame/runtime-benchmarks"]
try-runtime = ["frame/try-runtime"]