[package]
name = "pallet-zk-credentials"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec", features = ["derive"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false }
scale-info = { features = ["derive"], workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
ark-groth16 = { version = "0.5.0", default-features = false }
ark-bn254 = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-snark = { version = "0.5.1", default-features = false }
# SP1 - Latest stable version
sp1-sdk = { version = "5.2.3", optional = true }
serde = { workspace = true, features = ["derive"], default-features = false }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "ark-groth16/std",
    "ark-bn254/std",
    "ark-serialize/std",
    "ark-ec/std",
    "ark-ff/std",
    "sp-runtime/std",
    "frame-benchmarking/std",
]
sp1 = ["sp1-sdk"]
runtime-benchmarks = ["frame-support/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]